test/files/neg/virtpatmat_reach_sealed_unsealed.check
virtpatmat_reach_sealed_unsealed.scala:16: warning: match may not be exhaustive.
It would fail on the following input: false
  (true: Boolean) match { case true => } // not exhaustive, but reachable
       ^
virtpatmat_reach_sealed_unsealed.scala:18: warning: unreachable code
  (true: Boolean) match { case true => case false =>  case _ => } // exhaustive, last case is unreachable
                                                             ^
virtpatmat_reach_sealed_unsealed.scala:19: warning: unreachable code
  (true: Boolean) match { case true => case false =>  case _: Boolean => } // exhaustive, last case is unreachable
                                                                      ^
virtpatmat_reach_sealed_unsealed.scala:20: warning: unreachable code
  (true: Boolean) match { case true => case false =>  case _: Any => } // exhaustive, last case is unreachable
                                                                  ^
error: No warnings can be incurred under -Xfatal-warnings.
four warnings found
one error found
